--- a/test/css/style.css
+++ b/test/css/style.css
@@ -1,4 +1,3 @@
-body { background: #f5c9c5; }
 header { margin-top: 30px; }
 header a { color: black; text-decoration: none; }
 header a:hover { text-decoration: none; }
@@ -9,3 +8,76 @@ form, #results { padding: 0 20px; }
 
 .btn-primary { background: #952b2b; border-color: #957575; }
 .btn-primary:hover, .btn-primary:active, .btn-primary:focus { background: #782b2b;  border-color: #952b2b; }
+
+.logo p{
+    margin:0;
+    padding:0;
+    margin-left: 0px;
+    font-size: 36px;
+    display: inline-block;
+    line-height: 80px;
+    vertical-align: center;
+}
+
+body{
+  background: #AC8;
+  padding: 2em;
+  text-align: center;
+  font-weight:bolder;
+  -webkit-transition: all 2.5s; /* For Safari 3.1 to 6.0 */
+  transition: all 2.5s;
+}
+h1{
+  color:#727272;
+}
+.bordered {
+  color: #234;
+  display: inline-block;
+  font-size: 3em;
+  padding: 1em;
+  background: white;
+  background-clip: padding-box;
+  border: 4px dotted white;
+  position: relative;
+  z-index: 1;
+  -webkit-transition: all 2.5s; /* For Safari 3.1 to 6.0 */
+  transition: all 2.5s;
+}
+
+.bordered:before,
+.bordered:after {
+  border: inherit;
+  border-width: 2px;
+  content: '';
+  left: -6px;
+  right: -6px;
+  top: -6px;
+  bottom: -6px;
+  position: absolute;
+  z-index: -1;
+}
+
+.bordered:after {
+  border-width: 1px;
+  border-radius: 4px;
+  left: -7px;
+  right: -7px;
+  top: -7px;
+  bottom: -7px;
+}
+
+
+.image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    height: 120px;
+    margin:-60px 0 0 -60px;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
