--- a/test/css/style.css
+++ b/test/css/style.css
@@ -104,8 +104,9 @@ h1{
  position: relative;
 }
 .example1 h3 {
+    padding:0;
+    margin-left: 0px;
  font-size: 3em;
-
  position: absolute;
  width: 100%;
  height: 100%;
